# fips205

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rustfmt.toml
.github/workflows/: provenance.yaml  test.yml
benches/: README.md  benchmark.rs
dudect/: Cargo.toml  README.md
dudect/src/: main.rs
ffi/: Cargo.toml  README.md  fips205.h  fips205.py
ffi/src/: lib.rs
ffi/tests/: Makefile  baseline.c
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_sign.rs  fuzz_verify.rs
src/: algs.rs  fors.rs  hashers.rs  helpers.rs  hypertree.rs  lib.rs  slh.rs  test.rs  traits.rs  types.rs  wots.rs  xmss.rs
tests/: acvp_json_tests.rs  integration.rs  messages.rs  py_vectors.rs
tests/nist_acvp_vectors/: mod.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
wasm/www/: index.html  package.json
