[package]
name = "fips205"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 205 (draft): Stateless Hash-Based Digital Signature Standard"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
documentation = "https://docs.rs/fips205"
categories = ["cryptography", "no-std"]
keywords = ["FIPS", "FIPS205", "hash", "signature"]
repository = "https://github.com/integritychain/fips205"
rust-version = "1.70"


[dependencies]
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }  # For MSRV 1.70
rand_core = { version = "0.6.4", default-features = false }
sha3 = { version = "0.10.2", default-features = false }  # For MSRV 1.70
sha2 = { version = "0.10.8", default-features = false }


[dev-dependencies]
rand_chacha = "0.3.1"
hex = "0.4.3"


[features]
default = ["default-rng", "slh_dsa_sha2_128s", "slh_dsa_shake_128s", "slh_dsa_sha2_128f", "slh_dsa_shake_128f",
    "slh_dsa_sha2_192s", "slh_dsa_shake_192s", "slh_dsa_sha2_192f", "slh_dsa_shake_192f",
    "slh_dsa_sha2_256s", "slh_dsa_shake_256s", "slh_dsa_sha2_256f", "slh_dsa_shake_256f"]
default-rng = ["rand_core/getrandom"]
slh_dsa_sha2_128s = []
slh_dsa_shake_128s = []
slh_dsa_sha2_128f = []
slh_dsa_shake_128f = []
slh_dsa_sha2_192s = []
slh_dsa_shake_192s = []
slh_dsa_sha2_192f = []
slh_dsa_shake_192f = []
slh_dsa_sha2_256s = []
slh_dsa_shake_256s = []
slh_dsa_sha2_256f = []
slh_dsa_shake_256f = []


[profile.dev]
opt-level = 3


#[[bench]]
#name = "benchmark"
#harness = false


[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false