[package]
name = "fips205-dudect"
version = "0.1.0"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
fips205 = { path = ".." }
dudect-bencher = "0.6"


[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false