[package]
name = "fips205-dudect"
version = "0.4.0"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
publish = false
edition = "2021"


[dependencies]
fips205 = { path = ".." }
dudect-bencher = "0.6"
rand_core = { version = "0.6.4", default-features = false }


[profile.release]
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
