[package]
name = "wasm"
version = "0.1.2"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
description = "Sample web page utilizing FIPS 205 code"
repository = ""
license = "MIT OR Apache-2.0"
publish = false
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
fips205 = { path = "../../fips205", default-features = false, features = ["slh_dsa_sha2_128f"] }
rand_chacha = "0.3.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
#rand = { version = "0.9.0-alpha.0" , features = ["js"]}
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
